--- a/tabsorter.html
+++ b/tabsorter.html
@@ -1,1 +1,13 @@
-
+{
+     "manifest_version": 3,
+    "name": "Tabs Sorter",
+    "author": "Gabriela Aguilar 2025",
+    "version": "1.0.0.0",
+    "description": "Tab Sorter: Easing Navigation in Tab-Overloaded Scenarios.",
+    "permissions": [
+        "storage",
+        "activeTab",
+        "scripting",
+        "tabs"
+    ],
+}
